tests/signature_verification_failure/signature_verification_failure.exp
Error ------------------------------------------------------------------------------------------------------ arr.js:3:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the element type of an empty array. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   3| export const a = []
                       ^^


Error ------------------------------------------------------------------------------------------------------ arr.js:4:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Unexpected
array hole: [signature-verification-failure]

   4| export const b = [1, , 3];
                       ^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ arr.js:5:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Unexpected
spread in array: [signature-verification-failure]

   5| export const c = [1, ...b];
                       ^^^^^^^^^


Error -------------------------------------------------------------------------------------------- array-pattern.js:3:19

Missing type annotation for destructuring. [missing-annot]

   3| module.exports = ([x, y]) => {};
                        ^^^^^^


Error -------------------------------------------------------------------------------------------- array-pattern.js:3:19

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| module.exports = ([x, y]) => {};
                        ^^^^^^


Error ----------------------------------------------------------------------------------------------------- class.js:5:3

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at property `x`: [signature-verification-failure]

   5|   x = 1;
        ^^^^^^


Error ----------------------------------------------------------------------------------------------------- class.js:8:3

Literal properties not yet supported. [unsupported-syntax]

   8|   'b' = 5;
        ^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- class.js:8:3

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at literal property 'b': [signature-verification-failure]

   8|   'b' = 5;
        ^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:11:3

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at private field `#m`: [signature-verification-failure]

   11|   #m = 2;
         ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:14:3

Computed property keys not supported. [unsupported-syntax]

   14|   ['a'] = 3;
         ^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:14:3

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at computed property `['a']`: [signature-verification-failure]

   14|   ['a'] = 3;
         ^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:15:3

Computed property keys not supported. [unsupported-syntax]

   15|   ['a' + 'b'] = 4;
         ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:15:3

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at computed property `['a' + 'b']`: [signature-verification-failure]

   15|   ['a' + 'b'] = 4;
         ^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------- fn.js:3:13

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at function return: [signature-verification-failure]

   3| function f() {
                  


Error ------------------------------------------------------------------------------------------------------- fn.js:7:12

Missing type annotation for `x`. [missing-annot]

   7| function g(x): number {
                 ^


Error ------------------------------------------------------------------------------------------------------- fn.js:7:12

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   7| function g(x): number {
                 ^


Error --------------------------------------------------------------------------------------------------- getset.js:4:12

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at function return: [signature-verification-failure]

   4|     get x() {
                 


Error --------------------------------------------------------------------------------------------------- getset.js:7:11

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   7|     set x(x) { }
                ^


Error ----------------------------------------------------------------------------------------------------- misc.js:3:15

The type argument of a temporary base type must be a compatible literal type [invalid-temp-type]

   3| export var a: $TEMPORARY$number<'a'> = 42;
                    ^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- misc.js:5:15

Cannot use type without exactly 1 type argument. [nonpolymorphic-type-app]

   5| export var b: $TEMPORARY$number<1,1> = 42;
                    ^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- obj-pattern.js:3:19

Missing type annotation for destructuring. [missing-annot]

   3| module.exports = ({x, y}) => {};
                        ^^^^^^


Error ---------------------------------------------------------------------------------------------- obj-pattern.js:3:19

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| module.exports = ({x, y}) => {};
                        ^^^^^^


Error ------------------------------------------------------------------------------------------------- obj_decl.js:3:14

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at declaration of variable `a`: [signature-verification-failure]

   3| export var { a } = (42: any);
                   ^


Error ------------------------------------------------------------------------------------------------- obj_decl.js:5:20

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at declaration of variable `b`: [signature-verification-failure]

   5| export var { '42': b } = (42: any);
                         ^


Error ------------------------------------------------------------------------------------------------- obj_decl.js:7:19

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at declaration of variable `c`: [signature-verification-failure]

   7| export var { [b]: c } = (42: any);
                        ^


Error ----------------------------------------------------------------------------------------------------- rest.js:3:33

Missing type annotation for rest parameter `z`. [missing-annot]

   3| module.exports = (x: number, ...z) => {};
                                      ^


Error ----------------------------------------------------------------------------------------------------- rest.js:3:33

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| module.exports = (x: number, ...z) => {};
                                      ^


Error --------------------------------------------------------------------------------------------------- tparam.js:5:15

Cannot resolve name `X`. [cannot-resolve-name]

   5|     x: typeof X;
                    ^


Error --------------------------------------------------------------------------------------------------- tparam.js:5:15

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Invalid use
of type parameter: [signature-verification-failure]

   5|     x: typeof X;
                    ^


Error ---------------------------------------------------------------------------------------------------- typeof.js:3:5

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at declaration of variable `x`: [signature-verification-failure]

   3| var x = 2;
          ^


Error --------------------------------------------------------------------------------------------------- typeof.js:6:22

`typeof` can only be used to get the type of variables. [invalid-typeof]

   6| export var z: typeof 42 = 42;
                           ^^


Error --------------------------------------------------------------------------------------------- variable-decl.js:3:5

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at declaration of variable `x`: [signature-verification-failure]

   3| var x = 0;
          ^



Found 32 errors
